syntax = "proto3";

package ON.Fragments.Authorization.Payment.Stripe;

import "Protos/ON/Fragments/Authorization/Payment/Stripe/ProductRecord.proto";
import "Protos/ON/Fragments/Authorization/Payment/Stripe/StripeSubscriptionRecord.proto";

service StripeInterface {
  rpc StripeCancelOwnSubscription (StripeCancelOwnSubscriptionRequest) returns (StripeCancelOwnSubscriptionResponse) {}
  rpc StripeCheckOwnSubscription (StripeCheckOwnSubscriptionRequest) returns (StripeCheckOwnSubscriptionResponse) {}
  rpc StripeGetAccountDetails (StripeGetAccountDetailsRequest) returns (StripeGetAccountDetailsResponse) {}
  rpc StripeGetOwnSubscriptionRecords (StripeGetOwnSubscriptionRecordsRequest) returns (StripeGetOwnSubscriptionRecordsResponse) {}
  rpc StripeNewOwnSubscription (StripeNewOwnSubscriptionRequest) returns (StripeNewOwnSubscriptionResponse) {}
  rpc StripeCreateBillingPortal (StripeCreateBillingPortalRequest) returns (StripeCreateBillingPortalResponse) {}
  rpc StripeCreateCheckoutSession(StripeCheckoutSessionRequest) returns (StripeCheckoutSessionResponse) {}
}

message StripeCheckOwnSubscriptionRequest {
}

message StripeCheckOwnSubscriptionResponse {
	repeated StripeSubscriptionFullRecord Records = 1;
	string Error = 2;
}
 
message StripeCheckoutSessionRequest {
	string PriceId = 1;
}

message StripeCheckoutSessionResponse {
	string SessionUrl = 1;
	string Error = 2;
}
 
message StripeCreateBillingPortalRequest {
	string CustomerId = 1;
}

message StripeCreateBillingPortalResponse {
	string Url = 1;
	string Error = 2;
}

message StripeCancelOwnSubscriptionRequest {
  string Reason = 1;
  string SubscriptionId = 2;
}
  
message StripeCancelOwnSubscriptionResponse {
  StripeSubscriptionRecord Record = 1;
  string Error = 2;
}

message StripeGetAccountDetailsRequest {
}
  
message StripeGetAccountDetailsResponse {
  ProductList Products = 1;
  string ClientId = 2;
}
  
message StripeGetOwnSubscriptionRecordsRequest {
}
  
message StripeGetOwnSubscriptionRecordsResponse {
  repeated StripeSubscriptionRecord Records = 1;
}

message StripeNewOwnSubscriptionRequest {
  string SubscriptionId = 1;
  uint32 SubscriptionPrice = 2;
  string CustomerId = 3;
}
  
message StripeNewOwnSubscriptionResponse {
  StripeSubscriptionRecord Record = 1;
  string Error = 2;
}